tests/bc_interpreter/err_break_outside_loop.expected
<string>:2:5: error: break outside a loop
    break;
    ^^^^^^